--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <bbw-root></bbw-root>
 </body>
 </html>
