--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/x-icon" href="assets/img/attlogo.ico" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" />
   <meta charset="utf-8" />
   <title>Broadband Workflow</title>
   <base href="." />
-  <link rel="icon" type="image/x-icon" href="./assets/img/attlogo.ico" />
 </head>
 
 <body>
