--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,14 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/x-icon" href="assets/img/attlogo.ico" />
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" />
+  <!--<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" /> -->
+  <link href="http://www.att.com/ui/frameworks/rwd/2018.05/styles/2.3.3/css/icon-arrows.css" rel="stylesheet"/>
+  <link href="http://www.att.com/ui/frameworks/rwd/2018.05/styles/2.3.3/css/icon-controls.css" rel="stylesheet"/>
+  <link href="http://www.att.com/ui/frameworks/rwd/2018.05/styles/2.3.3/css/icon-people.css" rel="stylesheet"/>
+  <link href="http://www.att.com/ui/frameworks/rwd/2018.05/styles/2.3.3/css/icon-content.css" rel="stylesheet"/>
+  <link href="http://www.att.com/ui/frameworks/rwd/2018.05/styles/2.3.3/css/icon-location.css" rel="stylesheet"/>
+  <link href="http://www.att.com/ui/frameworks/rwd/2018.05/styles/2.3.3/css/icon-documents.css" rel="stylesheet"/>
   <meta charset="utf-8" />
   <title>Broadband Workflow</title>
   <base href="." />
