--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
 
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="icon" type="image/x-icon" href="assets/img/attlogo.ico" />
+  <meta charset="utf-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=10,IE=edge,chrome=1"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  
+  <link rel="icon" type="image/x-icon" href="assets/img/attlogo.ico"/>
   <!--<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" /> -->
   <link href="http://www.att.com/ui/frameworks/rwd/2018.05/styles/2.3.3/css/icon-arrows.css" rel="stylesheet"/>
